--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "grocery-angular",
   "version": "0.0.0",
+  "homepage": "https://alaa-yahia.github.io/Food-Ordering-With-Angular",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +31,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "gh-pages": "^3.2.3",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
